--- a/fe/src/app/section/section.component.html
+++ b/fe/src/app/section/section.component.html
@@ -1,1 +1,6 @@
-<p>section works!</p>
+<div class="title">
+  <div class="display">
+    <app-time-display></app-time-display>
+    <app-buttons></app-buttons>
+  </div>
+</div>
