자식컴포넌트에서 부모컴포넌트로 이벤트 전달

--- a/fe/src/app/section/buttons/buttons.component.html
+++ b/fe/src/app/section/buttons/buttons.component.html
@@ -1,5 +1,5 @@
 <div>
   <button class="start-btn" (click)="count($event)">start</button>
-  <button class="stop-btn">stop</button>
+  <button class="stop-btn" (click)="iAmStop()">stop</button>
   <button class="reset-btn">reset</button>
 </div>
