--- a/fe/src/app/section/section.component.html
+++ b/fe/src/app/section/section.component.html
@@ -1,6 +1,9 @@
 <div class="title">
   <div class="display">
     <app-time-display [inputData]="present"></app-time-display>
-    <app-buttons (testEvent)="targetFunc($event)" (clickEvent)="startTime($event)"></app-buttons>
+    <app-buttons 
+      (testEvent)="targetFunc($event)" 
+      (clickEvent)="startTime($event)"
+    ></app-buttons>
   </div>
 </div>
