--- a/fe/src/app/section/section.component.html
+++ b/fe/src/app/section/section.component.html
@@ -1,14 +1,1 @@
-<div class="title">
-  <div class="display">
-    <app-time-display></app-time-display>
-    <app-buttons (clickEvent)="commandText = $event"></app-buttons>
-    {{commandText}}
-
-
-    <!-- <app-time-display [inputData]="present"></app-time-display> -->
-    <!-- <app-buttons 
-      (testEvent)="targetFunc($event)" 
-      (clickEvent)="startTime($event)"
-    ></app-buttons> -->
-  </div>
-</div>
+<app-stopwatch></app-stopwatch>
