--- a/fe/src/app/app.component.html
+++ b/fe/src/app/app.component.html
@@ -1,3 +1,25 @@
 <app-header></app-header>
 <app-section></app-section>
 <app-footer></app-footer>
+
+
+<div class="good">
+  <ul>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
+</div>
+<div class="good">
+  <ul>
+    <li></li>
+    <li></li>
+    <li></li>
+</div>
+<div class="good">
+  <ul>
+    <li></li>
+    <li></li>
+    <li></li>
+  </div>      
+</ul>
