--- a/fe/src/app/section/stopwatch/stopwatch.component.html
+++ b/fe/src/app/section/stopwatch/stopwatch.component.html
@@ -1,8 +1,13 @@
 <div class="title">
     <div class="display">
       <app-time-display></app-time-display>
-      <app-buttons (clickEvent)="commandText = $event"></app-buttons>
-      {{commandText}}
+      <!-- <app-buttons (clickEvent)="commandText = $event"></app-buttons>
+      {{commandText}} -->
     </div>
+
+    <a [routerLink]="'/clock'">시계로 이동</a>
+    <button (click)="goClock()">
+      시계로 이동하는 버튼
+    </button>
   </div>
   
