--- a/fe/src/app/section/stopwatch/stopwatch.component.less
+++ b/fe/src/app/section/stopwatch/stopwatch.component.less
@@ -1,6 +1,9 @@
 .title {
   font-size: 30px;
   height: 200px;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .display {
@@ -8,4 +11,19 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.time-zone{
+  // height: 100px;
+}
+
+.go-clock{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  width: 200px;
 }
