--- a/fe/src/app/section/stopwatch/time-display/time-display.component.html
+++ b/fe/src/app/section/stopwatch/time-display/time-display.component.html
@@ -4,4 +4,8 @@
   <button class="start-btn" (click)="timeStart('start')">start</button>
   <button class="stop-btn" (click)="timeStop('stop')">stop</button>
   <button class="reset-btn" (click)="timeReset('reset')">reset</button>
+  
 </div>
+<ng-content></ng-content>
+
+
