--- a/fe/src/app/section/clock/clock.component.less
+++ b/fe/src/app/section/clock/clock.component.less
@@ -1,5 +1,31 @@
-@import "../../../assets/library.less";
+// @import "../../../assets/library.less";
 
-.time-string{
-  .fs(25px);
+.title {
+  font-size: 30px;
+  height: 200px;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.display {
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+.time-zone{
+  margin: 0px;
+}
+
+.stopwatch{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  width: 200px;
+  margin: 0px;
 }
